# k8s-feature-gates

./: .dockerignore  Cargo.toml  Dockerfile  README.md  RESULTS-26-28.md  RESULTS-29-31.md  RESULTS.md  cliff.toml  generate.sh
.github/workflows/: release.yaml
results/: 1.26-1.28.md  1.29-1.31.md  1.29-1.32.md
src/: cli.rs  lib.rs  main.rs
